--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section>
       <section>
         <div class="item-box" title="heading" id="h1"><i class="fa-solid fa-h"></i></div>
-        <div class="item-box" title="heading 3" id="h3"><img src="/src/asset/h3.svg" alt="h3-icon" width="19"></div>
+        <div class="item-box" title="heading 3" ><img src="/src/asset/h3.svg" id="h3" alt="h3-icon" width="20"></div>
         <div class="item-box" title="paragraph" id="paragraph"><i class="fa-solid fa-p"></i></div>
       </section>
       <section>
