--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/src/asset/favicon.ico">
     <link rel="stylesheet" href="/main.css" />
-    <script src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script> -->
     <title>Note app test</title>
   </head>
   <body ondragstart="return false;">
@@ -186,6 +186,7 @@
       }
 
       sessionStorage.setItem("before", "[]")
+      const udin = "udin"
     </script>
 
     <script type="module" src="./src/index.js"></script>
