--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="toolbar tool">
       <section>
         <div class="item-box" title="undo" id="undo"><i class="fa-solid fa-rotate-left icon"></i></div>
-        <div class="item-box" title="redo" id="redo"><i class="fa-solid fa-rotate-right icon"></i></i></div>
+        <div class="item-box" title="redo" id="redo"><i class="fa-solid fa-rotate-right icon"></i></div>
         <!-- <div ><img style="transform: translate(0, 2px);" src="/src/asset/fly logo.svg" alt="fly" width="30px"></div> -->
       </section>
       <div class="s-line"></div>
