--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       sessionStorage.setItem("before", "[]")
       </script>
       
-      <script type="module">
+      <script defer type="module">
         import {  signInWithPopup, GoogleAuthProvider, getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
         // import firebaseConfig from "/src/js/auth/firebaseConfig.js";
