fix image preview

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         // const auth = getAuth(app);
 
         function logOut() {
-          console.log('hai')
+          // console.log('hai')
           signOut(auth).then(() => {
             
             localStorage.removeItem("username")
