--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/main.css" />
     <script defer src="https://kit.fontawesome.com/ba324e01bb.js" crossorigin="anonymous"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="module" src="./src/index.js"></script>
-    <!-- <script defer src="./dist/main.js"></script> -->
+    <!-- <script type="module" src="./src/index.js"></script> -->
+    <script defer src="./dist/main.js"></script>
     <title>Note app test</title>
   </head>
   <body ondragstart="return false;">
